# atcoder_search

./: Cargo.toml
atcoder_search/: .env  Cargo.toml
atcoder_search/migrations/: 20230514033116_create_tables.down.sql  20230514033116_create_tables.up.sql  20230619091439_create_user_table.up.sql
atcoder_search/src/: cmd.rs  main.rs  modules.rs  pkg.rs
atcoder_search/src/cmd/: crawl.rs  generate.rs  mod.rs  post.rs  server.rs  updateindex.rs
atcoder_search/src/modules/: crawler.rs  generator.rs  handlers.rs  mod.rs
atcoder_search/src/modules/models/: request.rs  response.rs  tables.rs
atcoder_search/src/modules/problems/: crawler.rs  extractor.rs  generator.rs
atcoder_search/src/modules/users/: crawler.rs
atcoder_search/src/pkg/: models.rs  solr.rs
atcoder_search/src/pkg/models/: database.rs  solr.rs
atcoder_search/src/types/: request.rs  tables.rs
atcoder_search_derive/: Cargo.toml
atcoder_search_derive/src/: expand_field.rs  field_list.rs
atcoder_search_libs/: Cargo.toml
atcoder_search_libs/src/: api.rs  indexing.rs  lib.rs  solr.rs
atcoder_search_libs/src/solr/: core.rs  model.rs  parser.rs  query.rs
backend/: Cargo.toml  schema.sql
backend/atcoder_search/: .env  Cargo.toml  sqlx-data.json
backend/atcoder_search/migrations/: 20230514033116_create_tables.down.sql  20230514033116_create_tables.up.sql  20230619091439_create_user_table.down.sql  20230625040558_alter_problem_table.down.sql  20230625040558_alter_problem_table.up.sql  20230625040921_create_difficulty_table.down.sql  20230625040921_create_difficulty_table.up.sql  20230626033038_create_submissions_table.up.sql
backend/atcoder_search/misc/: category_relationships.csv
backend/atcoder_search/src/: main.rs
backend/atcoder_search/src/cmd/: crawl.rs  generate.rs  mod.rs  post.rs  server.rs
backend/atcoder_search/src/modules/: handlers.rs  mod.rs  utils.rs
backend/atcoder_search/src/modules/handlers/: mod.rs  problem.rs  user.rs
backend/atcoder_search/src/modules/problems/: crawler.rs  generator.rs  mod.rs
backend/atcoder_search/src/modules/recommend/: generator.rs
backend/atcoder_search/src/modules/users/: crawler.rs  generator.rs  mod.rs  scraper.rs
backend/atcoder_search/src/types/: mod.rs  response.rs  tables.rs
backend/atcoder_search_derive/: Cargo.toml
backend/atcoder_search_derive/src/: expand_field.rs  helper.rs  lib.rs
backend/atcoder_search_libs/: Cargo.toml
backend/atcoder_search_libs/src/: api.rs  indexing.rs  lib.rs
backend/atcoder_search_libs/src/solr/: core.rs  mod.rs
backend/solr/recommends/conf/: schema.xml
backend/solr/users/conf/: solrconfig.xml
middleware/solr/: Dockerfile
middleware/solr/problems/conf/: schema.xml
middleware/solr/users/conf/: schema.xml
