[package]
edition = "2021"
name = "atcoder_search"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = "0.4.24"
clap = {version = "4.2.7", features = ["derive"]}
dotenvy = "0.15.7"
hyper = "0.14.26"
itertools = "0.10.5"
minify-html = "0.11.1"
once_cell = "1.17.1"
percent-encoding = "2.2.0"
regex = "1.8.1"
scraper = "0.16.0"
serde = "1.0.163"
serde_json = "1.0.96"
sqlx = {version = "0.6.3", features = ["postgres", "chrono", "runtime-tokio-rustls"]}
thiserror = "1.0.40"
tokio = {version = "1.28.1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "net", "time", "sync", "signal", "test-util"]}
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["cors"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "fmt", "std", "json"]}
url = "2.3.1"
validator = {version = "0.16.0", features = ["derive"]}
