[package]
edition = "2021"
name = "atcoder_search"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
atcoder_search_libs = {version = "0.1.0", path = "../atcoder_search_libs"}
axum = "0.6.18"
bytes = {version = "1.4.0", features = ["std"]}
chrono = {version = "0.4.24", features = ["serde"]}
clap = {version = "4.2.7", features = ["derive"]}
dotenvy = "0.15.7"
ego-tree = "0.6.2"
futures = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
hyper = {version = "0.14.26", features = ["http1", "client", "runtime"]}
hyper-tls = "0.5.0"
itertools = "0.10.5"
minify-html = "0.11.1"
once_cell = "1.17.1"
percent-encoding = "2.2.0"
regex = "1.8.1"
reqwest = {version = "0.11.18", features = ["gzip", "json", "rustls-tls", "stream"]}
scraper = "0.16.0"
serde = "1.0.163"
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
serde_with = "3.0.0"
sqlx = {version = "0.6.3", features = ["postgres", "chrono", "runtime-tokio-rustls"]}
thiserror = "1.0.40"
tokio = {version = "1.28.1", features = ["fs", "rt", "rt-multi-thread", "io-util", "io-std", "net", "time", "sync", "signal", "test-util", "macros"]}
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["cors", "fs"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "fmt", "std", "json", "local-time", "time"]}
url = "2.3.1"
validator = {version = "0.16.0", features = ["derive"]}
