[package]
edition = "2021"
name = "atcoder_search_libs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
atcoder_search_derive = {version = "0.1.0", path = "../atcoder_search_derive"}
chrono = {version = "0.4.24", features = ["serde"]}
http-body = "0.4.5"
hyper = {version = "0.14.26", features = ["http1", "client", "runtime"]}
itertools = "0.10.5"
once_cell = "1.17.1"
regex = "1.8.1"
reqwest = {version = "0.11.18", features = ["json"]}
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
thiserror = "1.0.40"
tracing = "0.1.37"
unicode-normalization = "0.1.22"
url = "2.3.1"
validator = {version = "0.16.0", features = ["derive"]}

[dev-dependencies]
tokio = {version = "1.28.1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "net", "time", "sync", "signal", "test-util", "macros"]}
